--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^5.5.2",
+    "axios": "^1.6.0",
     "eslint-config-prettier": "^9.0.0",
     "font-awesome": "^4.7.0",
     "next": "14.0.0",
