--- a/package.json
+++ b/package.json
@@ -15,15 +15,28 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^5.5.2",
+    "@types/turndown": "^5.0.3",
     "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint-config-prettier": "^9.0.0",
     "font-awesome": "^4.7.0",
+    "lottie-react": "^2.4.0",
     "next": "14.0.0",
+    "openai": "^4.14.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-quill": "^2.0.0"
+    "react-markdown": "^9.0.0",
+    "react-quill": "^2.0.0",
+    "react-render-markup": "^3.6.1",
+    "rehype-parse": "^9.0.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-remark": "^10.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -33,6 +46,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
